--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ html {
 .lower-container{
   display: grid;
   grid-template-columns: 50% 50%; 
-  grid-template-rows: .15fr .5fr .05fr .1fr 3fr .35fr .1fr; 
+  grid-template-rows: .15fr .5fr .05fr .1fr 3fr .25fr .1fr; 
   row-gap: 10px;
   padding: 20px;
 }
@@ -96,12 +96,13 @@ html {
 .history{
   grid-column: 1 / span 2; 
   grid-row: 5/6;
+  padding-bottom: 10px;
 }
 .school{
   grid-column: 1 / span 2; 
   grid-row: 6/7;
   justify-self: center;
-  align-self: end;
+  align-self: center;
   padding-bottom: 10px;
   font-size: 20px;
 }
